--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
             <!-- Publications -->
             <section id="publications" class="section">
                 <h2>Publications</h2>
-                
+
+                <h3>Recent News</h3>
+                <div class="education-list-inline">
+                    <p><strong style="color: #e74c3c;">[New!]</strong> October 2024 | <a href="https://arxiv.org/abs/2510.07865" target="_blank"><strong style="color: #3498db;">DM1: MeanFlow with Dispersive Regularization for 1-Step Robotic Manipulation</strong></a> | Guowei Zou, Haitao Wang, Hejun Wu, Yukun Qian, Yuhang Wang, Weibing Li | arXiv preprint</p>
+
+                    <p><strong style="color: #e74c3c;">[New!]</strong> August 2024 | <a href="https://arxiv.org/abs/2508.02644" target="_blank"><strong style="color: #3498db;">D2PPO: Diffusion Policy Policy Optimization with Dispersive Loss</strong></a> | Guowei Zou, Weibing Li, Hejun Wu, Yukun Qian, Yuhang Wang, Haitao Wang | arXiv preprint</p>
+                </div>
+
                 <div class="publications-link">
                     <p><i class="fas fa-graduation-cap"></i> For a complete list of publications, please visit my <a href="https://scholar.google.com/citations?user=Rsci6I8AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
                 </div>
