--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="research-list-inline">
                     <p>2022 - 2023: <a href="https://en.tclcsot.com/" target="_blank" class="company-name">China Star Optoelectronics Technology Co., Ltd. (CSOT)</a>, Field Sequential Color Display. Hardware implementation of field sequential color display systems for advanced display technologies.</p>
 
-                    <p>Nov 2021 - Jun 2023: <a href="https://www.huawei.com/eu/" target="_blank" class="company-name">Huawei Technologies Co., Ltd.</a>, Virtual Reality AR-HUD Project. AI-based image quality enhancement for Picture Generation Unit in AR Head-Up Display systems.</p>
+                    <p>2021 - 2023: <a href="https://www.huawei.com/eu/" target="_blank" class="company-name">Huawei Technologies Co., Ltd.</a>, Virtual Reality AR-HUD Project. AI-based image quality enhancement for Picture Generation Unit in AR Head-Up Display systems.</p>
 
-                    <p>Nov 2021 - Jun 2023: <a href="https://www.vivo.com/en/" target="_blank" class="company-name">Vivo Mobile Communication Co., Ltd.</a>, Under-Display Camera/Sensor Project. Under-screen sensor modeling and deep learning-based signal enhancement for full-screen mobile phones.</p>
+                    <p>2021 - 2023: <a href="https://www.vivo.com/en/" target="_blank" class="company-name">Vivo Mobile Communication Co., Ltd.</a>, Under-Display Camera/Sensor Project. Under-screen sensor modeling and deep learning-based signal enhancement for full-screen mobile phones.</p>
 
                     <p>2019 - 2020: <a href="https://www.tridium.com/us/en" target="_blank" class="company-name">Tridium Inc.</a> (<a href="https://www.honeywell.com/us/en" target="_blank" class="company-name">Honeywell</a>), Smart Building IoT Project. Worked on an IoT-based smart building management system focusing on control and automation; gained practical experience in intelligent building integration and obtained an IoT Engineer Certification (APAC).</p>
 
@@ -146,11 +146,11 @@
                 <h3 class="bordered-subtitle">Honors & Awards</h3>
 
                 <div class="education-list-inline">
-                    <p>2021: PGWS 2021, Hong Kong - Best Paper Award</p>
+                    <p>2021: PGWS conference, Hong Kong, Best Paper Award</p>
 
                     <p>2020: Beijing Excellent Undergraduate Thesis, Beijing Municipal Government (0.9%, 27/3000)</p>
 
-                    <p>2020: Excellent Undergraduate Thesis, China Agricultural University (0.67%, 2/300)</p>
+                    <p>2020: Excellent Undergraduate Thesis, China Agricultural University (3.3%, 100/3000)</p>
                 </div>
             </section>
 
