--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
 
                 <h3>Recent News</h3>
                 <div class="education-list-inline">
-                    <p>[October 2025] DM1: MeanFlow with Dispersive Regularization for 1-Step Robotic Manipulation. Guowei Zou, Haitao Wang, Hejun Wu, Yukun Qian, Yuhang Wang, Weibing Li. [<a href="https://guowei-zou.github.io/dm1/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/dm1-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2510.07865" target="_blank">arXiv</a>]</p>
+                    <p>[November 6, 2025] New Blog Post: Not Just Learning the World, But Creating It: The Ultimate Goal of AI. [<a href="blog/embodied-ai-roadmap.html">Read More</a>]</p>
 
-                    <p>[August 2025] D2PPO: Diffusion Policy Policy Optimization with Dispersive Loss. Guowei Zou, Weibing Li, Hejun Wu, Yukun Qian, Yuhang Wang, Haitao Wang. [<a href="https://guowei-zou.github.io/d2ppo/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/d2ppo-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2508.02644" target="_blank">arXiv</a>]</p>
+                    <p>[October 9, 2025] DM1: MeanFlow with Dispersive Regularization for 1-Step Robotic Manipulation. Guowei Zou, Haitao Wang, Hejun Wu, Yukun Qian, Yuhang Wang, Weibing Li. [<a href="https://guowei-zou.github.io/dm1/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/dm1-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2510.07865" target="_blank">arXiv</a>]</p>
+
+                    <p>[August 4, 2025] D2PPO: Diffusion Policy Policy Optimization with Dispersive Loss. Guowei Zou, Weibing Li, Hejun Wu, Yukun Qian, Yuhang Wang, Haitao Wang. [<a href="https://guowei-zou.github.io/d2ppo/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/d2ppo-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2508.02644" target="_blank">arXiv</a>]</p>
                 </div>
 
                 <div class="publications-link">
