--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </p>
 
                         <div class="academic-links">
-                            <a href="https://scholar.google.com/citations?user=Rsci6I8AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
+                            <a href="https://scholar.google.com/citations?user=NsvS6l4AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
                             <span class="separator">|</span>
                             <a href="https://www.researchgate.net/profile/Guowei-Zou" target="_blank">ResearchGate</a>
                         </div>
@@ -88,15 +88,23 @@
 
                 <h3>Recent News</h3>
                 <div class="education-list-inline">
-                    <p>[November 6, 2025] New Blog Post: Not Just Learning the World, But Creating It: The Ultimate Goal of AI. [<a href="blog/embodied-ai-roadmap.html">Read More</a>]</p>
+                    <p>[November 8, 2025] New Blog Post: Imitation and Transcendence: Reflections on Life Through Robot Learning. [<a href="blog/imitation-and-transcendence.html">English</a>] [<a href="blog/imitation-and-transcendence-zh.html">Chinese</a>]</p>
 
-                    <p>[October 9, 2025] DM1: MeanFlow with Dispersive Regularization for 1-Step Robotic Manipulation. Guowei Zou, Haitao Wang, Hejun Wu, Yukun Qian, Yuhang Wang, Weibing Li. [<a href="https://guowei-zou.github.io/dm1/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/dm1-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2510.07865" target="_blank">arXiv</a>]</p>
+                    <p>[November 6, 2025] New Blog Post: Not Just Learning the World, But Creating It: The Ultimate Goal of AI. [<a href="blog/embodied-ai-roadmap.html">English</a>] [<a href="blog/embodied-ai-roadmap-zh.html">Chinese</a>]</p>
 
-                    <p>[August 4, 2025] D2PPO: Diffusion Policy Policy Optimization with Dispersive Loss. Guowei Zou, Weibing Li, Hejun Wu, Yukun Qian, Yuhang Wang, Haitao Wang. [<a href="https://guowei-zou.github.io/d2ppo/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/d2ppo-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2508.02644" target="_blank">arXiv</a>]</p>
+                    <div class="publication-item">
+                        <img src="assets/DM1.png" alt="DM1" class="publication-thumb">
+                        <p>[October 9, 2025] DM1: MeanFlow with Dispersive Regularization for 1-Step Robotic Manipulation. Guowei Zou, Haitao Wang, Hejun Wu, Yukun Qian, Yuhang Wang, Weibing Li. [<a href="https://guowei-zou.github.io/dm1/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/dm1-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2510.07865" target="_blank">arXiv</a>]</p>
+                    </div>
+
+                    <div class="publication-item">
+                        <img src="assets/D2PPO.png" alt="D2PPO" class="publication-thumb">
+                        <p>[August 4, 2025] D2PPO: Diffusion Policy Policy Optimization with Dispersive Loss <strong>(Accepted to AAAI 2026)</strong>. Guowei Zou, Weibing Li, Hejun Wu, Yukun Qian, Yuhang Wang, Haitao Wang. [<a href="https://guowei-zou.github.io/d2ppo/" target="_blank">Project Page</a>] [<a href="https://github.com/Guowei-Zou/d2ppo-release" target="_blank">Code</a>] [<a href="https://arxiv.org/abs/2508.02644" target="_blank">arXiv</a>]</p>
+                    </div>
                 </div>
 
                 <div class="publications-link">
-                    <p><i class="fas fa-graduation-cap"></i> For a complete list of publications, please visit my <a href="https://scholar.google.com/citations?user=Rsci6I8AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
+                    <p><i class="fas fa-graduation-cap"></i> For a complete list of publications, please visit my <a href="https://scholar.google.com/citations?user=NsvS6l4AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
                 </div>
             </section>
 
