--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                 <div class="publications-link">
                     <p><i class="fas fa-graduation-cap"></i> For a complete list of publications, please visit my <a href="https://scholar.google.com/citations?user=NsvS6l4AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar profile</a>.</p>
                 </div>
+
+                <h3>Patents</h3>
+
+                <div class="education-list-inline">
+                    <p>Z. Qin, <strong>G. Zou</strong>, et al. Adaptive Refresh Rate Field Sequential Color Display. ZL2022103803143 (Granted, 2025)</p>
+
+                    <p>Z. Qin, <strong>G. Zou</strong>, et al. Deep Learning-based Control for Field Sequential Display. ZL2021107930745 (Granted, 2023)</p>
+
+                    <p>Z. Qin, W. Yang, Y. Cheng, <strong>G. Zou</strong>, et al. High-resolution Light Field Display Method. ZL2021108736155 (Granted, 2022)</p>
+                </div>
             </section>
 
             <!-- Education -->
