--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 
                 <h3>Recent News</h3>
                 <div class="education-list-inline">
+                    <p>[December 4, 2025] New Blog Post: <strong>Smart but Lacking Judgment: What Today's AI Is Still Missing</strong>. [<a href="blog/smart-but-lacking-judgment.html">English</a>] [<a href="blog/smart-but-lacking-judgment-zh.html">Chinese</a>]</p>
+
                     <p>[November 8, 2025] New Blog Post: Imitation and Transcendence: Reflections on Life Through Robot Learning. [<a href="blog/imitation-and-transcendence.html">English</a>] [<a href="blog/imitation-and-transcendence-zh.html">Chinese</a>]</p>
 
                     <p>[November 6, 2025] New Blog Post: Not Just Learning the World, But Creating It: The Ultimate Goal of AI. [<a href="blog/embodied-ai-roadmap.html">English</a>] [<a href="blog/embodied-ai-roadmap-zh.html">Chinese</a>]</p>
